# mm_manager

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  Makefile  README.md  generate_advert_prompts.py  generate_intl_sbr.py  generate_lcd.py  generate_lcd_lata.py  generate_lcd_lir.py  generate_npa.py  icc_dial_codes.csv  millennium.lua  mm_accounting.c  mm_admess.c  mm_areacode.c  mm_callin.c  mm_callscrn.c  mm_callstat.c  mm_card.c  mm_card.h  mm_card_mtr1.c  mm_carrier.c  mm_carrier_mtr1.c  mm_coinvl.c  mm_commstat.c  mm_config.c  mm_connection.c  mm_convert_callscrn_mtr2_to_mtr1.c  mm_convert_card_mtr2_to_mtr1.c  mm_dlog2pcap.c  mm_fconfig.c  mm_featru.c  mm_instsv.c  mm_lcd.c  mm_lcd.py  mm_luhn.c  mm_manager.c  mm_manager.h  (+19 more)
.github/workflows/: c-cpp.yml  cmake.yml  coverity.yml
config/: advert_prompts.csv  control_rom_versions.csv
src/: mm_accounting.c  mm_admess.c  mm_areacode.c  mm_callin.c  mm_callscrn.c  mm_callstat.c  mm_card.c  mm_card.h  mm_card_mtr1.c  mm_carrier.c  mm_carrier_mtr1.c  mm_coinvl.c  mm_commstat.c  mm_config.c  mm_connection.c  mm_convert_callscrn_mtr2_to_mtr1.c  mm_convert_card_mtr2_to_mtr1.c  mm_dlog2pcap.c  mm_fconfig.c  mm_instsv.c  mm_lcd.c  mm_limserv.c  mm_luhn.c  mm_manager.c  mm_manager.h  mm_modem.c  mm_packtest.c  mm_pcap.c  mm_pcap.h  mm_proto.c  mm_rate.c  mm_rateint.c  mm_rdlist.c  mm_serial.c  mm_serial.h  mm_serial_posix.c  mm_serial_win32.c  mm_smcard.c  mm_sqlite3.c  mm_table_cutter.c  (+5 more)
wireshark/: README.md  millennium.lua
